# environ-tracker-firmware

./: .gitignore  README.md  west.yml
app/: CMakeLists.txt  Kconfig  ble.conf  imu.conf  log.conf  lora.conf  prj.conf  sensors.conf  shell.conf
app/inc/: accumulator.h  ble_localisation.h  controller.h  environ.h  file_helpers.h  gnss.h  imu.h  location.h
app/inc/ble/: ble_helpers.h  ble_localisation.h  ble_network.h
app/inc/file/: file_common.h  file_helpers.h  file_init.h
app/inc/gnss/: gnss.h
app/inc/network/: decode_pb.h  encode_pb.h
app/src/: accumulator.c  ble_localisation.c  controller.c  environ.c  file_helpers.c  gnss.c  gui.c  imu.c  lorawan.c  shell.c  sys_init.c
app/src/ble/: ble_helpers.c  ble_localisation.c  ble_network.c
app/src/file/: file_common.c  file_helpers.c  file_init.c
app/src/gnss/: gnss.c  gnss_shell_cmds.c  minmea.c
app/src/init/: gpio_init.c  log_init.c  time_init.c
app/src/network/: decode_pb.c  encode_pb.c  lorawan.c
app/src/network/proto/: beacon.options  beacon.proto  upload_data.proto
app/tests/: ble_tests.c
boards/arm/: environ-tracker-v1.dts
boards/arm/environ-tracker/: Kconfig.board  Kconfig.defconfig  board.cmake  environ-tracker-v1.dts  environ-tracker-v1.yaml  environ-tracker-v1_defconfig
boards/arm/environ_tracker/: Kconfig.board  Kconfig.defconfig  environ_tracker.dts  environ_tracker.yaml  environ_tracker_defconfig
boards/arm/environ_tracker2/: Kconfig  Kconfig.board  Kconfig.defconfig  board.c  environ_tracker2-pinctrl.dtsi  environ_tracker2.dts  environ_tracker2.yaml  (+1 more)
drivers/: CMakeLists.txt  Kconfig
drivers/counter/: CMakeLists.txt  Kconfig  Kconfig.rv3028  rtc_rv3028.c
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.sx1502  Kconfig.sx1508b  gpio_sx1502.c  gpio_sx1508b.c
drivers/sensor/: CMakeLists.txt  Kconfig
patches/: README.md  date_service_rtc.patch  things_network_channels.patch
samples/blinky/: CMakeLists.txt  prj.conf
samples/bme680/: CMakeLists.txt  prj.conf
samples/cfb/: CMakeLists.txt  prj.conf
samples/fs/: CMakeLists.txt  prj.conf
samples/ibeacon/: CMakeLists.txt
samples/ibeacon/src/: main.c
samples/lsm6dso/: prj.conf
samples/test_app/: CMakeLists.txt  prj.conf
(+44 files in other folders)
